exemplo2.js and exemplo1.js made

--- a/Aula_20/index.html
+++ b/Aula_20/index.html
@@ -2,12 +2,16 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Ninja - Aula 20</title>
 </head>
 <body>
-    <h5>Inspecione essa página e veja o console para ver resolvido o "exemplo1.js"</h5>
-    <script src="./scripts/exemplo1.js"></script>
+    <h5>Inspecione essa página e veja o console para ver resolvido o "exemplo2.js"</h5>
+    <h5>Descomente a tag "script" referente ao "exemplo1.js" para vê-lo resolvido.</h5>
+    <a id="my-link">My text link</a>
+    <a class="my-class">My text link</a>
+    <a class="my-class">My text link</a>
+    <a class="my-class">My text link</a>
+    <!--<script src="./scripts/exemplo1.js"></script>-->
+    <script src="./scripts/exemplo2.js"></script>
 </body>
 </html>
