exemplo4.js terminado, resta apenas resolução do desafio20.js

--- a/Aula_20/index.html
+++ b/Aula_20/index.html
@@ -5,7 +5,8 @@
     <title>Javascript Ninja - Aula 20</title>
 </head>
 <body>
-    <h5>Inspecione essa página e veja o console para ver resolvido o "exemplo3.js"</h5>
+    <h5>Inspecione essa página e veja o console para ver resolvido o "exemplo4.js"</h5>
+    <h5>Descomente a tag "script" referente ao "exemplo3.js" para vê-lo resolvido.</h5>
     <h5>Descomente a tag "script" referente ao "exemplo2.js" para vê-lo resolvido.</h5>
     <h5>Descomente a tag "script" referente ao "exemplo1.js" para vê-lo resolvido.</h5>
     <br><br/>
@@ -20,10 +21,11 @@
     <form action="/" method="GET">
         <input type="text" name="username" class="input" id="username">
         <input type="password" name="password" class="input" id="password">
-        <button type="submit" class="button">Enviar</button>
+        <button type="submit" class="button" id="button">Enviar</button>
     </form>
     <!--<script src="./scripts/exemplo1.js"></script>-->
     <!--<script src="./scripts/exemplo2.js"></script>-->
-    <script src="./scripts/exemplo3.js"></script>
+    <!--<script src="./scripts/exemplo3.js"></script>-->
+    <script src="./scripts/exemplo4.js"></script>
 </body>
 </html>
