--- a/Aula_20/index.html
+++ b/Aula_20/index.html
@@ -30,7 +30,7 @@
         <input type="password" name="password" class="input" id="password">
         <br><br/>
         <h5>Message:</h5>
-        <input type="text" name="message" class="input" id="message">
+        <textarea cols="30" rows="10"></textarea>
         <br><br />
         <button type="submit" class="button" id="button">Enviar</button>
     </form>
