exemplo3.js feito com exemplificação do clearInterval()

--- a/Aula_21/index.html
+++ b/Aula_21/index.html
@@ -5,9 +5,12 @@
     <title>JS Ninja - Aula 21</title>
 </head>
 <body>
+    <button data-js="button">Parar cronômetro</button>
+    <h5>Descomente o exemplo3.js para contrastar o setTimeout() do setInterval()</h5>
     <h5>Descomente o exemplo2.js para uma utilização do setTimeout()</h5>
     <h5>Descomente o exemplo1.js para ver um exemplo de sync bloqueando a thread</h5>
     <!--<script src="./scripts/exemplo1.js"></script>-->
-    <script src="./scripts/exemplo2.js"></script>
+    <!--<script src="./scripts/exemplo2.js"></script>-->
+    <script src="./scripts/exemplo3.js"></script>
 </body>
 </html>
