exemplo2.js finalizado e exemplo3.js criado para aplicarmos o prototype

--- a/Aula_22/index.html
+++ b/Aula_22/index.html
@@ -7,9 +7,13 @@
     <title>Aula 22 - Funções e suas propriedades</title>
 </head>
 <body>
+    <h3>Abra o console para ver a execução dos scripts</h3>
+    <br />
+    <h5>Descomente o exemplo3.js para vê-lo em execução.</h5>
     <h5>Descomente o exemplo2.js para vê-lo em execução.</h5>
     <h5>Descomente o exemplo1.js para vê-lo em execução.</h5>
-    <script src="./scripts/exemplo2.js"></script>
+    <script src="./scripts/exemplo3.js"></script>
+    <!-- <script src="./scripts/exemplo2.js"></script> -->
     <!-- <script src="./scripts/exemplo1.js"></script> -->
 </body>
 </html>
