--- a/Aula_22/index.html
+++ b/Aula_22/index.html
@@ -13,7 +13,8 @@
     <h5>Descomente o exemplo3.js para vê-lo em execução.</h5>
     <h5>Descomente o exemplo2.js para vê-lo em execução.</h5>
     <h5>Descomente o exemplo1.js para vê-lo em execução.</h5>
-    <script src="./scripts/exemplo4.js"></script>
+    <script src="./desafio22.js"></script>
+    <!-- <script src="./scripts/exemplo4.js"></script> -->
     <!--<script src="./scripts/exemplo3.js"></script> -->
     <!-- <script src="./scripts/exemplo2.js"></script> -->
     <!-- <script src="./scripts/exemplo1.js"></script> -->
