--- a/Aula_23/index.html
+++ b/Aula_23/index.html
@@ -10,6 +10,6 @@
   <h3>Abra o console para ver a execução dos scripts</h3>
   <br />
   <h5>Descomente o exemplo1.js para vê-lo em execução.</h5>
-  <script src="./scripts/exemplo1.js"></script>
+  <script src="./scripts/main.js"></script>
 </body>
 </html>
