--- a/Aula_23/index.html
+++ b/Aula_23/index.html
@@ -9,7 +9,8 @@
 <body>
   <h3>Abra o console para ver a execução dos scripts</h3>
   <br />
-  <h5>Descomente o exemplo1.js para vê-lo em execução.</h5>
-  <script src="./scripts/main.js"></script>
+  <h5>Descomente o main.js para vê-lo em execução.</h5>
+  <!--<script src="./scripts/main.js"></script>-->
+  <script src="./scripts/debbugImperativo.js"></script>
 </body>
 </html>
