$buttonEqual em desenvolvimento, resta retornar por operação

--- a/Aula_23/index.html
+++ b/Aula_23/index.html
@@ -7,10 +7,44 @@
   <title>Aula 23 - Debugger</title>
 </head>
 <body>
-  <h3>Abra o console para ver a execução dos scripts</h3>
+  <h3>Abra o console para ver a execução dos scripts, segue calculadora:</h3>
   <br />
+    <div>
+      <input data-js="visor" type="text" value="0" readonly>
+    </div>
+    <br />
+    <div>
+      <button data-js="button-number" value="1">1</button>
+      <button data-js="button-number" value="2">2</button>
+      <button data-js="button-number" value="3">3</button>
+    </div>
+    <div>
+      <button data-js="button-number" value="4">4</button>
+      <button data-js="button-number" value="5">5</button>
+      <button data-js="button-number" value="6">6</button>
+    </div>
+    <div>
+      <button data-js="button-number" value="7">7</button>
+      <button data-js="button-number" value="8">8</button>
+      <button data-js="button-number" value="9">9</button>
+    </div>
+    <br />
+    <div>
+      <button data-js="button-operation" value="+">+</button>
+      <button data-js="button-operation" value="-">-</button>
+      <button data-js="button-operation" value="x">x</button>
+      <button data-js="button-operation" value="%">%</button>
+    </div>
+    <br />
+    <div>
+      <button data-js="button-equal" value="=">=</button>
+      <button data-js="button-ce" value="ce">CE</button>
+    </div>
+  <br />
+  <h5>Descomente o debbugImperativo.js para vê-lo em execução.</h5>
   <h5>Descomente o main.js para vê-lo em execução.</h5>
+  <script src="./desafio23.js"></script>
   <!--<script src="./scripts/main.js"></script>-->
-  <script src="./scripts/debbugImperativo.js"></script>
+  <!-- <script src="./scripts/debbugImperativo.js"></script> -->
 </body>
 </html>
