Aula 24 finalizada com desafio23.js e desafio24.js resolvidos

--- a/Aula_23_e_24/index.html
+++ b/Aula_23_e_24/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aula 23 - Debugger</title>
+  <title>Aula 23 e 24 - Debugger/ Calculadora</title>
 </head>
 <body>
   <h3>Abra o console para ver a execução dos scripts, segue calculadora:</h3>
@@ -41,9 +41,11 @@
       <button data-js="button-ce" value="ce">CE</button>
     </div>
   <br />
+  <h5>Descomente o desafio23.js para vê-lo em execução.</h5>
   <h5>Descomente o debbugImperativo.js para vê-lo em execução.</h5>
   <h5>Descomente o main.js para vê-lo em execução.</h5>
-  <script src="./desafio23.js"></script>
+  <script src="./desafio24.js"></script>
+  <!-- <script src="./desafio23.js"></script> -->
   <!--<script src="./scripts/main.js"></script>-->
   <!-- <script src="./scripts/debbugImperativo.js"></script> -->
 </body>
