propagacaoDeEventos.html feito em conjunto com o exemplo1.js para mostrar propagação de eventos

--- a/Aula_25/eventosInline.html
+++ b/Aula_25/eventosInline.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aula 25 - Eventos</title>
+  <title>Aula 25 - Eventos JS Inline</title>
 </head>
 <body>
   <h3>Exemplo com eventos javascript inline</h3>
