exemplo2.js resolvido e desafio25.js pronto para ser resolvido

--- a/Aula_25/propagacaoDeEventos.html
+++ b/Aula_25/propagacaoDeEventos.html
@@ -13,7 +13,15 @@
         Link
         <span data-js="span">span</span>
       </a>
+      <br /><br />
+      <input type="text" data-js="input" />
+      <select data-js="select">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+      </select>
     </div>
-    <script src="scripts/exemplo1.js"></script>
+    <!-- <script src="scripts/exemplo1.js"></script> -->
+    <script src="scripts/exemplo2.js"></script>
 </body>
 </html>
