Aula 25 finalizada com desafio25.js resolvido

--- a/Aula_25/propagacaoDeEventos.html
+++ b/Aula_25/propagacaoDeEventos.html
@@ -7,7 +7,7 @@
   <title>Aula 25 - Propagação de eventos no JS</title>
 </head>
 <body>
-  <h3>Eventos de pai-filho e filho-pai no JS:</h3>
+  <h3>Eventos de pai-filho e filho-pai no JS: <br />(descomente o exemplo1.js para vê-lo em execução)</h3>
     <div data-js="div">
       <a href="#" data-js="link">
         Link
