exemplo4.js finalizado com exemplos de .appendChild(), .inserBefore(), .cloneNode() e hasChildNodes()

--- a/Aula_26/index.html
+++ b/Aula_26/index.html
@@ -19,7 +19,8 @@
         </p>
       </div>
       Texto 2
-    </section><footer class="main-footer">
+    </section>
+    <footer class="main-footer">
       <small class="main-footer__copyright">
         2021 &copy; Todos os direitos reservados
       </small>
@@ -28,6 +29,7 @@
   <!-- <script src="./scripts/exemplo1.js"></script> -->
   <!-- <script src="./scripts/exemplo2.js"></script> -->
   <!-- <script src="./scripts/exemplo3.js"></script> -->
-  <script src="./scripts/exemplo4.js"></script>
+  <!-- <script src="./scripts/exemplo4.js"></script> -->
+  <script src="./scripts/exemplo5.js"></script>
 </body>
 </html>
