exemplo6.js finalizado com os principais atributos de consulta do DOM, desafio26.js tbm está montado para ser resolvido

--- a/Aula_26/index.html
+++ b/Aula_26/index.html
@@ -5,7 +5,7 @@
   <title>Aula 26 - Percorrendo o DOM - Fundamentos</title>
 </head>
 <body>
-  <div class="main" data-js="main">
+  <div class="main" id="id-main" data-js="main" data-number="1">
     <header class="main-header">
       <h1 class="main-header__title">Título da página</h1>
     </header>
@@ -30,6 +30,8 @@
   <!-- <script src="./scripts/exemplo2.js"></script> -->
   <!-- <script src="./scripts/exemplo3.js"></script> -->
   <!-- <script src="./scripts/exemplo4.js"></script> -->
-  <script src="./scripts/exemplo5.js"></script>
+  <!-- <script src="./scripts/exemplo5.js"></script> -->
+  <!-- <script src="./scripts/exemplo6.js"></script> -->
+  <script src="./scripts/desafio26.js"></script>
 </body>
 </html>
