desafio26.js resolvido

--- a/Aula_26/index.html
+++ b/Aula_26/index.html
@@ -31,7 +31,6 @@
   <!-- <script src="./scripts/exemplo3.js"></script> -->
   <!-- <script src="./scripts/exemplo4.js"></script> -->
   <!-- <script src="./scripts/exemplo5.js"></script> -->
-  <!-- <script src="./scripts/exemplo6.js"></script> -->
-  <script src="./scripts/desafio26.js"></script>
+  <script src="./scripts/exemplo6.js"></script>
 </body>
 </html>
