exemplo2.js da Aula_27/ criado com os eventos 'load' e 'DOMContentLoaded'

--- a/Aula_27/index.html
+++ b/Aula_27/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Aula 26 - Percorrendo o DOM - Fundamentos</title>
+  <script src="./scripts/exemplo2.js"></script>
 </head>
 <body>
   <div class="main" id="id-main" data-js="main" data-number="1">
     <header class="main-header">
       <h1 class="main-header__title">Título da página</h1>
+      <img src="http://apod.nasa.gov/apod/image/9712/orionfull_jcc_big.jpg" alt="" >
     </header>
     <section class="main-content">
       Texto 1
@@ -26,6 +28,6 @@
       </small>
     </footer>
   </div>
-  <script src="./scripts/exemplo1.js"></script>
+  <!-- <script src="./scripts/exemplo1.js"></script> -->
 </body>
 </html>
