exemplo3.js na aula_27/ feito mostrando cópia de arrays com Array.prototype.slice() e testagem de tipos com Object.prototype.toString()

--- a/Aula_27/index.html
+++ b/Aula_27/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Aula 26 - Percorrendo o DOM - Fundamentos</title>
-  <script src="./scripts/exemplo2.js"></script>
+  <!-- <script src="./scripts/exemplo2.js"></script> -->
 </head>
 <body>
   <div class="main" id="id-main" data-js="main" data-number="1">
@@ -29,5 +29,6 @@
     </footer>
   </div>
   <!-- <script src="./scripts/exemplo1.js"></script> -->
+  <script src="./scripts/exemplo3.js"></script>
 </body>
 </html>
