desafio27.js pronto para ser resolvido

--- a/Aula_27/index.html
+++ b/Aula_27/index.html
@@ -29,6 +29,7 @@
     </footer>
   </div>
   <!-- <script src="./scripts/exemplo1.js"></script> -->
-  <script src="./scripts/exemplo3.js"></script>
+  <!-- <script src="./scripts/exemplo3.js"></script> -->
+  <script src="./scripts/desafio27.js"></script>
 </body>
 </html>
