exemplo_2.js finalizado com algumas propriedades do AJAX: .readyState, .status e o evento 'onreadystatechange'

--- a/Aula_28/index.html
+++ b/Aula_28/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1>Essa página HTML utiliza AJAX</h1>
   <p>Verifique o Network na inspeção para ver requisições de source tipo 'xhr'</p>
-  <script src="./scripts/exemplo_1.js"></script>
+  <!-- <script src="./scripts/exemplo_1.js"></script> -->
+  <script src="./scripts/exemplo_2.js"></script>
 </body>
 </html>
