--- a/Aula_28/index.html
+++ b/Aula_28/index.html
@@ -10,6 +10,7 @@
   <h1>Essa página HTML utiliza AJAX</h1>
   <p>Verifique o Network na inspeção para ver requisições de source tipo 'xhr'</p>
   <!-- <script src="./scripts/exemplo_1.js"></script> -->
-  <script src="./scripts/exemplo_2.js"></script>
+  <!-- <script src="./scripts/exemplo_2.js"></script> -->
+  <script src="./scripts/exemplo_3.js"></script>
 </body>
 </html>
