--- a/Aula_28/index.html
+++ b/Aula_28/index.html
@@ -11,6 +11,7 @@
   <p>Verifique o Network na inspeção para ver requisições de source tipo 'xhr'</p>
   <!-- <script src="./scripts/exemplo_1.js"></script> -->
   <!-- <script src="./scripts/exemplo_2.js"></script> -->
-  <script src="./scripts/exemplo_3.js"></script>
+  <!-- <script src="./scripts/exemplo_3.js"></script> -->
+  <script src="./scripts/exemplo_4.js"></script>
 </body>
 </html>
