desafio28.html modificado para ficar mais simples e parecido com o HTML da correção apresentada pelo Daciuk

--- a/Aula_28/desafio28.html
+++ b/Aula_28/desafio28.html
@@ -7,46 +7,29 @@
   <title>Desafio 28 - AJAX</title>
 </head>
 <body>
-
   <h1>Neste desafio 28, entre com um CEP para ser buscado e clique em submit:</h1>
   <h3>Após o submit as informações sobre este CEP aparecerão na tela</h3>
   <hr>
-
-  <br />
-  <label for="cepBuscado">Digite aqui o CEP (apenas números): </label>
-  <input type="text" name="cepBuscado" id="cepBuscado">
-  <br /><br />
-  <input type="submit" value="Submit">
+  <form>
+    <label for="input-cep">Digite aqui o CEP (apenas números): </label>
+    <input type="text" data-js="input-cep">
+    <br /><br />
+    <button type="submit" data-js="submit">Consultar CEP</button>
+  </form>
   <hr>
-
-  <br />
-    <span>Informações do CEP buscado: </span>
-  <br />
-  <br />
-    <label for="logradouro">Logradouro:</label>
-    <input type="text" id="logradouro" name="logradouro" value="Rua X" readonly>
-  <br /><br />
-    <label for="bairro">Bairro:</label>
-    <input type="text" id="bairro" name="bairro" value="Bairro Y" readonly>
-  <br /><br />
-    <label for="estado">Estado:</label>
-    <input type="text" id="estado" name="estado" value="Estado Z" readonly>
-  <br /><br />
-    <label for="cidade">Cidade:</label>
-    <input type="text" id="cidade" name="cidade" value="Cidade W" readonly>
-  <br /><br />
-    <label for="cep">CEP:</label>
-    <input type="text" id="cep" name="cep" value="xxxxx-xxx" readonly>
-  <br /><br />
+  <div data-js="status">
+    <h3><u>Status da requisição:</u></h3>
+  </div>
   <hr>
-
-  <br />
-    <span>Status da requisição:</span>
-  <br /><br />
-  <textarea id="estadoDaRequisicao" name="estadoDaRequisicao" rows="2" cols="50">
-    Carregando, sucesso ou erro.
-  </textarea>
-
+  <div data-js="cep-info">
+    <h3><u>Dados retornados para o CEP buscado:</u></h3>
+    <p><strong> --> Logradouro: </strong><span data-js="logradouro">-</span></p>
+    <p><strong> --> Bairro: </strong><span data-js="bairro">-</span></p>
+    <p><strong> --> Estado: </strong><span data-js="estado">-</span></p>
+    <p><strong> --> Cidade: </strong><span data-js="cidade">-</span></p>
+    <p><strong> --> CEP: </strong><span data-js="cep">-</span></p>
+  </div>
+  <hr>
   <script src="./desafio28.js"></script>
 </body>
 </html>
