API da DOM usada no desafio27.js reutilizado no desafio28.js para manipular e captar o evento de submissão do form e tratamento da request no evento 'readystatechange'

--- a/Aula_28/desafio28.html
+++ b/Aula_28/desafio28.html
@@ -10,11 +10,11 @@
   <h1>Neste desafio 28, entre com um CEP para ser buscado e clique em submit:</h1>
   <h3>Após o submit as informações sobre este CEP aparecerão na tela</h3>
   <hr>
-  <form>
+  <form data-js="form-cep">
     <label for="input-cep">Digite aqui o CEP (apenas números): </label>
     <input type="text" data-js="input-cep">
     <br /><br />
-    <button type="submit" data-js="submit">Consultar CEP</button>
+    <button type="submit">Consultar CEP</button>
   </form>
   <hr>
   <div data-js="status">
