desafio28.js concluído

--- a/Aula_28/desafio28.html
+++ b/Aula_28/desafio28.html
@@ -19,6 +19,7 @@
   <hr>
   <div data-js="status">
     <h3><u>Status da requisição:</u></h3>
+    <span data-js="status-msg">--</span>
   </div>
   <hr>
   <div data-js="cep-info">
