Module Pattern aplicada no arquivo dom.js e utilizada dentro de desafio28.js, que também seguiu a pattern

--- a/Aula_28_e_29/desafio28.html
+++ b/Aula_28_e_29/desafio28.html
@@ -31,6 +31,7 @@
     <p><strong> --> CEP: </strong><span data-js="cep">-</span></p>
   </div>
   <hr>
-  <script src="./desafio28.js"></script>
+  <script src="./scripts/dom.js"></script>
+  <script src="./scripts/desafio28.js"></script>
 </body>
 </html>
