companyInfo and his getter are already available on app() of desafio29.js

--- a/Aula_28_e_29/desafio29.html
+++ b/Aula_28_e_29/desafio29.html
@@ -12,8 +12,8 @@
   <hr>
   <header>
     <h5>
-      <span>Borges Veiculos</span> -
-      <span>(35) 3623-0000</span>
+      <span data-js="company-name"></span> -
+      <span data-js="company-phone"></span>
     </h5>
   </header>
   <hr>
@@ -64,7 +64,7 @@
 
     </tbody>
   </table>
-  <!-- <script src="./scripts/dom.js"></script> -->
+  <script src="./scripts/dom.js"></script>
   <script src="./scripts/desafio29.js"></script>
 </body>
 </html>
