--- a/Aula_28_e_29/desafio29.html
+++ b/Aula_28_e_29/desafio29.html
@@ -5,6 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Desafio 29 - Usando Module Pattern com AJAX</title>
+  <style>
+    img {
+      max-width: 200px;
+    }
+    tr, td, th, table {
+      border: 1px, solid, black;
+    }
+  </style>
 </head>
 <body>
   <h1>Nesse desafio 29, teremos um cadastro de carros como o que se segue abaixo:</h1>
@@ -21,27 +29,27 @@
     <ul>
       <li>
         <label>Imagem do carro:</label>
-        <input type="url" />
+        <input type="url" data-js="image"/>
       </li>
       <br>
       <li>
         <label>Marca / Modelo:</label>
-        <input type="text" />
+        <input type="text" data-js="brand-model"/>
       </li>
       <br>
       <li>
         <label>Ano:</label>
-        <input type="text" />
+        <input type="text" data-js="year"/>
       </li>
       <br>
       <li>
         <label>Placa:</label>
-        <input type="text" />
+        <input type="text" data-js="plate"/>
       </li>
       <br>
       <li>
         <label>Cor:</label>
-        <input type="text" />
+        <input type="text" data-js="color"/>
       </li>
       <br>
       <li>
@@ -60,9 +68,7 @@
         <th>Cor</th>
       </tr>
     </thead>
-    <tbody>
-
-    </tbody>
+    <tbody data-js="table-cars"></tbody>
   </table>
   <script src="./scripts/dom.js"></script>
   <script src="./scripts/desafio29.js"></script>
