--- a/Aula_31/index.html
+++ b/Aula_31/index.html
@@ -23,14 +23,13 @@
     <button type="submit" data-js="button">Enviar</button>
   </form>
   <div class="main" data-js="main"></div>
-  <!--
-    Descomentar esse código para rodar o exemplo_1.js
+    <!-- Descomentar esse código para rodar o exemplo_1.js
     <div class="main" data-js="main">
       <h1>Título</h1>
       <p>Parágrafo</p>
-    </div>
-  -->
+    </div> -->
   <!-- <script src="./scripts/exemplo_1.js"></script> -->
-  <script src="./scripts/exemplo_2.js"></script>
+  <!-- <script src="./scripts/exemplo_2.js"></script> -->
+  <script src="./scripts/exemplo_3.js"></script>
 </body>
 </html>
