--- a/Aula_31/index.html
+++ b/Aula_31/index.html
@@ -30,6 +30,7 @@
     </div> -->
   <!-- <script src="./scripts/exemplo_1.js"></script> -->
   <!-- <script src="./scripts/exemplo_2.js"></script> -->
-  <script src="./scripts/exemplo_3.js"></script>
+  <!--<script src="./scripts/exemplo_3.js"></script> -->
+  <script src="./scripts/exemplo_4.js"></script>
 </body>
 </html>
