--- a/Aula_31/index.html
+++ b/Aula_31/index.html
@@ -32,6 +32,7 @@
   <!-- <script src="./scripts/exemplo_2.js"></script> -->
   <!--<script src="./scripts/exemplo_3.js"></script> -->
   <!-- <script src="./scripts/exemplo_4.js"></script> -->
-  <script src="./scripts/exemplo_5.js"></script>
+  <!-- <script src="./scripts/exemplo_5.js"></script> -->
+  <script src="./scripts/exemplo_6.js"></script>
 </body>
 </html>
