Aula_32 montada com front/ já chamando uma requisição GET na rota localhost:3000/user

--- a/Aula_32/front/index.html
+++ b/Aula_32/front/index.html
@@ -7,6 +7,8 @@
   <title>Aula 32 - Aprofundando em Ajax</title>
 </head>
 <body>
-  <script src="./scripts/exemplo_1.js"></script>
+  <h1>Front</h1>
+  <h5>Inspecione o console para ver esse front chamando nosso back feito em ../rest-api</h5>
+  <script src="./scripts/main.js"></script>
 </body>
 </html>
